# grimoire

./: .coverage  .gitignore  README.md  check.cmd  check.sh  pyproject.toml
.obsidian/: workspace.json
draft/grim/: __init__.py  attributes.py  concurrency.py  importing.py  markov.py  maybe_params.py  re_enum.py  utilities.py  virtual_environment.py  work.py
drft/grim/: _misc.py
src/: attributes.py  concurrency.py  decorations.py
src/grim/: __init__.py  attributes.py  automata.py  concurrency.py  decorations.py  factory_dict.py  files.py  importing.py  inspection.py  inspections.py  markov.py  markov2.py  markov_chain.py  maybe_params.py  nested_enum.py  pathinfo.py  paths.py  percentage.py  re_enum.py  sequences.py  strings.py  table.py  tables.py  utilities.py  virtual_environment.py
src/grim.automata.egg-info/: PKG-INFO  SOURCES.txt
src/grim.egg-info/: PKG-INFO  SOURCES.txt
src/grim/attributes/: fields.py
src/grim/automata/: cache.py  events.py
src/grim/statemachine/: __init__.py  states.py
src/grimoire/: __init__.py  _test.py  _types.py  base.py  concurrency.py  data.py  fieldnode.py  ident.py  inspection.py  markov.py  misc.py  packrat.py  params.py  record.py  ref.md  schema.py  schematic.py  schematics.py  table.py  text.py  typenode.py  types.txt  vars.py
src/grimoire/schematic/: schematic.py
src/grimoire/utils/: annotations.py
tests/: test_draft.py  test_markov.py  test_sanity.py  test_states.py
