[project]
name = "grimoire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Girthquake", email = "captainpatchwork@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4
fix = true
exclude = ["draft"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["BLE001", "E501", "B903"]
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.hatch.build.targets.wheel]
packages = ["src/grimoire"]
